--- a/index.html
+++ b/index.html
@@ -10,5 +10,23 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="swap-theme-button-container">
+      <label for="dark-or-light-theme-button">
+        <span class="material-symbols-outlined"> light_mode </span>
+        Swap Themes
+      </label>
+      <input type="checkbox" id="dark-or-light-theme-button" />
+    </div>
+    <div class="background-theme-container">
+      <div class="rotate-part">
+        <div class="light-theme">
+          <span class="material-symbols-outlined"> light_mode </span>
+        </div>
+        <div class="dark-theme">
+          <span class="material-symbols-outlined"> dark_mode </span>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
