--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
   <body>
     <div class="swap-theme-button-container">
       <label for="dark-or-light-theme-button">
-        <span class="material-symbols-outlined"> light_mode </span>
+        <div class="theme-icon-container">
+          <span class="material-symbols-outlined light_mode-icon">
+            light_mode
+          </span>
+          <span class="material-symbols-outlined dark_mode-icon">
+            dark_mode
+          </span>
+        </div>
         Swap Themes
       </label>
       <input type="checkbox" id="dark-or-light-theme-button" />
